Oops - fix up 3 instances where distint Integer instances are required
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/collections/trunk@1476860 13f79535-47bb-0310-9956-ffa450edef68